finished flex exercise 04 - had to add a max-width to prevent the flowers from moving too much when the screen resized

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,17 +10,27 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+  border: green 2px solid;
 }
 
-/* do not edit this footer */
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 52px;
+.plant-container {
+  border: blue 2px solid;
   display: flex;
-  align-items: center;;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  background: #eee;
+  margin: 0px 52px;
+  max-width: 200px;
+}
+
+.body {
+  display:flex;
+  justify-content:center;
+  border: red 2px solid;
+}
+
+.text {
+  text-align: center;
 }
